--- a/17-table.html
+++ b/17-table.html
@@ -1,1 +1,109 @@
-<!-- HTML 코드를 작성해 주세요. -->
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>테이블 관련 요소</title>
+</head>
+<body>
+  <h1>과목별 테스트 결과</h1>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>과목명</th>
+        <th scope="col">HTML/CSS</th>
+        <th scope="col">JavaScript</th>
+        <th scope="col">React</th>
+      </tr>
+    </thead>
+    <tfoot>
+      <tr>
+        <th scope="row">금윤호</th>
+        <td>100</td>
+        <td>98</td>
+        <td>95</td>
+      </tr>
+    </tfoot>
+    <tbody>
+      <tr>
+        <th scope="row">범쌤</th>
+        <td>97</td>
+        <td>100</td>
+        <td>99</td>
+      </tr>
+      <tr>
+        <th scope="row">홍길동</th>
+        <td>80</td>
+        <td>75</td>
+        <td>63</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <p id="tableDesc">
+    프론테엔드 관련 기술 시험 결과를 나타낸 표입니다.
+  </p>
+
+  <table border="1" aria-describedby="tableDesc" >
+    <thead>
+      <tr>
+        <th>과목명</th>
+        <th id="html">HTML/CSS</th>
+        <th id="js">JavaScript</th>
+        <th id="react">React</th>
+      </tr>
+    </thead>
+    <tr>
+      <th id="ma01">김미리</th>
+      <td headers="html ma01">100</td>
+      <td headers="js ma01">98</td>
+      <td headers="react ma01">95</td>
+    </tr>
+    <tr>
+      <th id="ma02">임시연</th>
+      <td headers="html ma02">97</td>
+      <td headers="js ma02">100</td>
+      <td headers="react ma02">99</td>
+    </tr>
+    <tr>
+      <th id="ma03">김희진</th>
+      <td headers="html ma03">75</td>
+      <td headers="js ma03">80</td>
+      <td headers="react ma03">63</td>
+    </tr>
+  </table>
+
+  <table class="lecture__table">
+    <caption>
+      입문자를 위한 Git과 HTML&CSS 과정
+      <span>학습시간, 난이도, 교육비 지원, 평가항목, 수료기준, 정원, 교재 정보 등을 나타낸 표</span>
+    </caption>
+    <tr>
+      <th scope="row">학습시간</th>
+      <td>09:00 ~ 17:00 ( 28시간 )</td>
+      <th>난이도</th>
+      <td>초급</td>
+    </tr>
+    <tr>
+      <th scope="row">교육비 지원</th>
+      <td>고용보험 비환급</td>
+      <th>평가항목</th>
+      <td>출석률 100%</td>
+    </tr>
+    <tr>
+      <th scope="row">수료기준</th>
+      <td>총점 80점 이상시 수료</td>
+      <th>정원</th>
+      <td>24 명</td>
+    </tr>
+    <tr>
+      <th scope="row">교재정보</th>
+      <td colspan="3">
+        입문자를 위한 Git과 HTML&CSS<br />
+        HTML & CSS 웹사이트 개발과 디자인 기초 (35,000원)
+      </td>
+    </tr>
+  </table>
+</body>
+</html>
