--- a/27-font.html
+++ b/27-font.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>폰트 관련 속성</title>
-  <link rel="stylesheet" href="./css/27-font.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&family=Pangolin&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&family=Pangolin&family=Sunflower:wght@300;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/27-font.css" />
 </head>
 <body>
   <h1 class="heading">hello CSS</h1>
-  <p>'함께 성장하는 바른 교육' 이듬(EUID)'과 멋사가 만났습니다. 좋은 프론트엔드 개발자를 양성하기 위해 최선의 노력을 다하겠습니다. 여러분도 적극 동참해 주시기 바랍니다. '함께 성장하는 바른 교육' 이듬(EUID)'과 멋사가 만났습니다. 좋은 프론트엔드 개발자를 양성하기 위해 최선의 노력을 다하겠습니다. 여러분도 적극 동참해 주시기 바랍니다. '함께 성장하는 바른 교육' 이듬(EUID)'과 멋사가 만났습니다. 좋은 프론트엔드 개발자를 양성하기 위해 최선의 노력을 다하겠습니다. 여러분도 적극 동참해 주시기 바랍니다. '함께 성장하는 바른 교육' 이듬(EUID)'과 멋사가 만났습니다. 좋은 프론트엔드 개발자를 양성하기 위해 최선의 노력을 다하겠습니다. 여러분도 적극 동참해 주시기 바랍니다. '함께 성장하는 바른 교육' 이듬(EUID)'과 멋사가 만났습니다. 좋은 프론트엔드 개발자를 양성하기 위해 최선의 노력을 다하겠습니다. 여러분도 적극 동참해 주시기 바랍니다.</p>
+  <div><p>'함께 성장하는 바른 교육' 이듬(EUID)'과 멋사가 만났습니다. 좋은 프론트엔드 개발자를 양성하기 위해 최선의 노력을 다하겠습니다. 여러분도 적극 동참해 주시기 바랍니다. '함께 성장하는 바른 교육' 이듬(EUID)'과 멋사가 만났습니다. 좋은 프론트엔드 개발자를 양성하기 위해 최선의 노력을 다하겠습니다. 여러분도 적극 동참해 주시기 바랍니다. '함께 성장하는 바른 교육' 이듬(EUID)'과 멋사가 만났습니다. 좋은 프론트엔드 개발자를 양성하기 위해 최선의 노력을 다하겠습니다. 여러분도 적극 동참해 주시기 바랍니다. '함께 성장하는 바른 교육' 이듬(EUID)'과 멋사가 만났습니다. 좋은 프론트엔드 개발자를 양성하기 위해 최선의 노력을 다하겠습니다. 여러분도 적극 동참해 주시기 바랍니다. '함께 성장하는 바른 교육' 이듬(EUID)'과 멋사가 만났습니다. 좋은 프론트엔드 개발자를 양성하기 위해 최선의 노력을 다하겠습니다. 여러분도 적극 동참해 주시기 바랍니다.</p></div>
 </body>
 </html>
